# finwiz

./: .gitignore  README.md  audit.md  crewai_flow.html  pyproject.toml  test_stock_crew.py
docs/: DESIGN_PRINCIPLES.md  agent_handbook.md  knowledge_base_maintenance.md  output_formatting_guide.md  rag_guidelines.md  reference.md
searches/indexed/: analyze_search_results.py
src/finwiz/: __init__.py  main.py  rag_config.py
src/finwiz/crews/crypto_crew/: crypto_crew.py
src/finwiz/crews/crypto_crew/config/: agents.yaml  tasks.yaml
src/finwiz/crews/etf_crew/: etf_crew.py
src/finwiz/crews/etf_crew/config/: agents.yaml  tasks.yaml
src/finwiz/crews/report_crew/: report_crew.py
src/finwiz/crews/report_crew/config/: agents.yaml  tasks.yaml
src/finwiz/crews/stock_crew/: stock_crew.py
src/finwiz/crews/stock_crew/config/: agents.yaml  tasks.yaml
src/finwiz/templates/: html_template.html
src/finwiz/tools/: __init__.py  alpha_vantage_tool.py  coinmarketcap_tool.py  crewai_retry_patch.py  custom_tool.py  finance_tools.py  html_parser_tool.py  json_output_tool.py  json_parser_tool.py  kraken_api_tool.py  llm_retry.py  logger.py  rag_tools.py  save_to_rag_tool.py  split_file.py  update_knowledge_base.py  web_tools.py  yahoo_finance_company_info_tool.py  yahoo_finance_etf_holdings_tool.py  yahoo_finance_history_tool.py  yahoo_finance_news_tool.py  yahoo_finance_ticker_info_tool.py  yahoo_finance_tool.py
src/finwiz/tools/unused/: html_output_tool.py  html_parser_tool.py  json_output_tool.py
src/finwiz/utils/: config_loader.py  flow_utils.py
